# dask-sql-segfault

./: README.md  dask-sql-install.patch  flake.nix  pyproject.toml
tests/: conftest.py  test_repro.py
