[tool.poetry]
name = "dask-sql-segfault"
version = "0.1.0"
description = "Reproduction of JVM segfault with dask-sql"
authors = ["ksonj <git@ksonj.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dask-sql = "^2022.6.0"
numpy = "<1.22.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
